[gd_scene load_steps=7 format=3 uid="uid://cexxpsir7xpf7"]

[ext_resource type="Script" path="res://Denny/Scripts/pause_menu.gd" id="1_00jrl"]
[ext_resource type="Theme" uid="uid://bb7nmsm3qnp0v" path="res://Denny/Scripts/Shaders & Themes/StartBlue.tres" id="2_ducsp"]
[ext_resource type="FontFile" uid="uid://dg7y8bujjct72" path="res://Denny/Assets/Godot-Fontpack/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" id="3_p3rmv"]
[ext_resource type="Theme" uid="uid://qt6021uccigr" path="res://Denny/Scripts/Shaders & Themes/SettingsYellow.tres" id="4_n3avw"]
[ext_resource type="Theme" uid="uid://cumtffc0gtf1n" path="res://Denny/Scripts/Shaders & Themes/QuitRed.tres" id="5_2cafg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xghy3"]
bg_color = Color(0.25, 0.25, 0.25, 0.85098)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("1_00jrl")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180005, 0.180005, 0.180005, 0.803922)

[node name="Panel" type="Panel" parent="PauseMenu/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -92.0
offset_right = 123.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xghy3")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -62.0
offset_right = 101.5
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_ducsp")
theme_override_fonts/font = ExtResource("3_p3rmv")
text = "Resume"

[node name="Settings" type="Button" parent="PauseMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("4_n3avw")
theme_override_fonts/font = ExtResource("3_p3rmv")
text = "Settings"

[node name="Back" type="Button" parent="PauseMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("5_2cafg")
theme_override_fonts/font = ExtResource("3_p3rmv")
text = "Return to Main Menu"

[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Back" to="." method="_on_back_pressed"]
